--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -17,6 +17,8 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: $background;
+  color:$text-color;
+  background-color: $body-color;
 }
 
 .main {
@@ -27,3 +29,4 @@ html {
   font-size: 10rem;
   flex-flow: column;
 }
+
